--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "mongoose": "^8.5.0",
     "next": "14.2.4",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^6.0.1",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
@@ -18,13 +22,14 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
