--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.407.0",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
     "postcss-import": "^16.1.0",
@@ -19,7 +23,9 @@
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
