--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
+# Warning: Do not add secrets (API keys and similar) to this file, as it source controlled!
+# Use `.env.local` for any secrets, and ensure it is not added to source control
+
 # q0viyZzlgMvc2dQq
 # const dbName = process.env.DB_NAME;
 DB_NAME = quality-mar
 MONGODB_URI = mongodb+srv://mouad07m20:q0viyZzlgMvc2dQq@quality-mar.edfbcnc.mongodb.net
 # /?retryWrites=true&w=majority&appName=quality-mar
+NEXT_PUBLIC_SANITY_PROJECT_ID="gg0y1nrr"
+NEXT_PUBLIC_SANITY_DATASET="production"
