--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/parallax": "^9.7.3",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.50.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -18,6 +21,7 @@
     "lucide-react": "^0.407.0",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
+    "next-sanity": "^9.4.2",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
     "react": "^18",
@@ -26,6 +30,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
+    "sanity": "^3.50.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
