--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
+    "react-use-measure": "^2.1.1",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
