--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.7",
     "lucide-react": "^0.407.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
     "postcss-import": "^16.1.0",
